# ncbi_dl

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
examples/: run_download.rs
