[package]
name = "ncbi_dl"
version = "0.1.10"
edition = "2021"
authors = ["eric9n@gmail.com"]
license = "MIT"
repository = "https://github.com/eric9n/ncbi_dl"
keywords = ["bioinformatics", "metagenomics", "microbiome", "ncbi"]
description = "A command-line tool for downloading and managing NCBI data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "s"          # 或者 "z"
debug-assertions = false
# panic = 'abort'
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
strip = true      # Remove debug symbols

[dependencies]
reqwest = { version = "0.12", features = ["stream", "multipart", "gzip"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
regex = "1"
clap = { version = "4.4.10", features = ["derive"] }
futures-util = "0.3.30"
reqwest-retry = "0.6.1"
reqwest-middleware = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.0"
md-5 = "0.10.6"
async-compression = "0.4.5"
tar = "0.4"
num_cpus = "1.13.1"
